# tcpgpudmarxd

./: .gitignore  BUILD  CMakeLists.txt  Dockerfile  Dockerfile.coverage  Dockerfile.machine_test  Dockerfile_debian11  METADATA  README.md  gpudirect_tcpxd-config.cmake
app/: BUILD  CMakeLists.txt  tcpgpudmad.cu  tcpgpudmarxd.cu
benchmark/: benchmark_common.cc  benchmark_common.h  connection_worker.cu.cc  connection_worker.cu.h  event_handler_factory.cu.cc  event_handler_factory.cu.h  event_handler_interface.h  gpu_receive_common.cu.cc  gpu_receive_common.cu.h  gpu_receive_event_handler.cu.cc  gpu_receive_event_handler.cu.h  gpu_receive_miss_flag_event_handler.cu.cc  gpu_receive_miss_flag_event_handler.cu.h  gpu_receive_mix_tcp_event_handler.cu.cc  gpu_receive_mix_tcp_event_handler.cu.h  gpu_receive_no_token_free_event_handler.cu.cc  gpu_receive_no_token_free_event_handler.cu.h  gpu_receive_token_free_event_handler.cu.cc  gpu_receive_token_free_event_handler.cu.h  gpu_send_event_handler.cu.cc  gpu_send_event_handler.cu.h  gpu_send_event_handler_miss_flag.cu.cc  gpu_send_event_handler_miss_flag.cu.h  gpu_send_event_handler_mix_tcp.cu.cc  gpu_send_event_handler_mix_tcp.cu.h  gpu_send_oob_event_handler.cu.cc  gpu_send_oob_event_handler.cu.h  socket_helper.cc  socket_helper.h  tcp_receive_event_handler.cc  tcp_receive_event_handler.h  tcp_receive_tcp_direct_event_handler.cc  tcp_receive_tcp_direct_event_handler.h  tcp_send_event_handler.cc  tcp_send_event_handler.h  tcp_send_tcp_direct_event_handler.cc  tcp_send_tcp_direct_event_handler.h  tcpdirect_common.h  validation.cu.cc  validation.cu.h
cuda/: CMakeLists.txt  common.cu  common.cu.cc  common.cuh  cu_dmabuf_gpu_page_allocator.cu  cu_dmabuf_gpu_page_allocator.cu.cc  cu_dmabuf_gpu_page_allocator.cuh  cu_ipc_memfd_exporter.cu  cu_ipc_memfd_exporter.cu.h  cu_ipc_memfd_exporter.cuh  cu_ipc_memfd_handle.cu  cu_ipc_memfd_handle.cu.cc  cu_ipc_memfd_handle.cu.h  cu_ipc_memfd_handle.cuh  cu_ipc_memfd_handle_importer.cu  cu_ipc_memfd_handle_importer.cu.cc  cu_ipc_memfd_handle_importer.cuh  cuda_context_manager.cu  cuda_context_manager.cu.cc  cuda_context_manager.cuh  cuda_ipc_memhandle.cu  cuda_ipc_memhandle.cuh  cuda_ipc_memhandle_exporter.cu  cuda_ipc_memhandle_exporter.cu.cc  cuda_ipc_memhandle_exporter.cu.h  cuda_ipc_memhandle_exporter.cuh  cuda_ipc_memhandle_importer.cu  cuda_ipc_memhandle_importer.cu.h  cuda_ipc_memhandle_importer.cuh  dmabuf_gpu_page_allocator.cu  dmabuf_gpu_page_allocator.cu.h  dmabuf_gpu_page_allocator.cuh  gpu_page_allocator_interface.cu.h  gpu_page_allocator_interface.cuh  gpu_page_exporter_factory.cu  gpu_page_exporter_factory.cuh  gpu_page_handle_interface.cuh
docs/: DEV-GUIDE.md  contributing.md
ethtool_test/: ethtool_test.cc  run_ethtool.sh
include/: a3_gpu_rxq_configurator.cu.h  a3_gpu_rxq_configurator.cuh  a3vm_gpu_rxq_configurator.h  application_registry_client.h  application_registry_manager.h  auto_discovery_gpu_rxq_configurator.h  dummy_ethtool_nic_configurator.h  ethtool_common.h  ethtool_nic_configurator.h  ethtool_no_headersplit_nic_configurator.h  flow_steer_ntuple.h  gpu_page_exporter_interface.h  gpu_rxq_configuration_factory.h  gpu_rxq_configurator_interface.h  ioctl_nic_configurator.h  ipc_gpumem_fd_metadata.h  monstertruck_gpu_rxq_configurator.h  nic_configurator_factory.h  nic_configurator_interface.h  (+10 more)
machine_test/cuda/: CMakeLists.txt  connection_worker.cu  connection_worker.cuh  cuda_dmabuf_gpu_page_allocator.cu  cuda_dmabuf_gpu_page_allocator.cuh  event_handler_factory.cu  event_handler_factory.cuh  gpu_receive_common.cu  gpu_receive_common.cuh  gpu_receive_event_handler.cu  gpu_receive_event_handler.cuh  gpu_receive_miss_flag_event_handler.cu  gpu_receive_miss_flag_event_handler.cuh  gpu_receive_mix_tcp_event_handler.cu  gpu_receive_mix_tcp_event_handler.cuh  gpu_receive_no_token_free_event_handler.cu  gpu_receive_no_token_free_event_handler.cuh  gpu_receive_token_free_event_handler.cu  gpu_receive_token_free_event_handler.cuh  gpu_send_event_handler.cu  gpu_send_event_handler.cuh  gpu_send_event_handler_miss_flag.cu  gpu_send_event_handler_miss_flag.cuh  gpu_send_event_handler_mix_tcp.cu  gpu_send_event_handler_mix_tcp.cuh  gpu_send_oob_event_handler.cu  gpu_send_oob_event_handler.cuh  validation.cu  validation.cuh
machine_test/src/: CMakeLists.txt  benchmark_common.cc  tcp_receive_event_handler.cc  tcp_receive_tcp_direct_event_handler.cc  tcp_send_event_handler.cc  tcp_send_tcp_direct_event_handler.cc
machine_test/test/: CMakeLists.txt  tcpdirect_benchmark.cu  tcpx_message_size_tests.cu  tcpx_rx_ioctl_tests.cu  tcpx_single_connection_tests.cu  tcpx_tx_ioctl_tests.cu
proto/: BUILD  CMakeLists.txt  gpu_rxq_configuration.proto  unix_socket_message.proto  unix_socket_proto.proto
src/: CMakeLists.txt  a3_gpu_rxq_configurator.cu  a3vm_gpu_rxq_configurator.cc  application_registry_client.cc  application_registry_manager.cc  auto_discovery_gpu_rxq_configurator.cc  dummy_ethtool_nic_configurator.cc  ethtool_nic_configurator.cc  ethtool_no_headersplit_nic_configurator.cc  gpu_page_exporter_interface.cc  gpu_rxq_configuration_factory.cc  ioctl_nic_configurator.cc  monstertruck_gpu_rxq_configurator.cc  nic_configurator_factory.cc  pci_helpers.cc  predvt_gpu_rxq_configurator.cc  proto_utils.cc  rx_rule_client.cc  rx_rule_manager.cc  socket_helper.cc  unix_socket_client.cc  unix_socket_connection.cc  unix_socket_server.cc  vf_reset_detector.cc
telemetry/: CMakeLists.txt  gpu_mem_exporter_telemetry.cc  gpu_mem_exporter_telemetry.h  gpu_mem_importer_telemetry.cc  gpu_mem_importer_telemetry.h  rx_rule_client_telemetry.cc  rx_rule_client_telemetry.h  rx_rule_manager_telemetry.cc  rx_rule_manager_telemetry.h  telemetry_interface.cc  telemetry_interface.h
telemetry/proto/: CMakeLists.txt  rx_manager_telemetry.proto
test/: CMakeLists.txt  application_registry_test.cc  gpu_rxq_configuration_factory_test.cc  proto_utils_test.cc  rx_rule_client_test.cc  rx_rule_manager_test.cc  socket_helper_test.cc  unix_socket_server_client_test.cc
test/data/: gpu_rxq_configuration_factory_test.txt
(+33 files in other folders)
